--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -2,8 +2,8 @@
     <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-4 xl:w-3">
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
-                <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
-                <span class="font-medium text-xl font-semibold"><span class="text-primary">GRL</span></span>
+                <img src="assets/images/grl_logo.png" alt="logo" height="80" width="120"     />
+                <!-- <span class="font-medium text-xl font-semibold"><span class="text-primary">GRL</span></span> -->
             </span>
             <!-- <span class="text-600 font-medium line-height-3">Don't have an account?</span>
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a> -->
