--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
     <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-8 xl:w-5">
         <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
-                <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
+                <img src="assets/images/grl_logo.png" alt="logo" height="80" width="80"     />
                 <span class="font-medium text-xl font-semibold">VAHAN<span class="text-primary"> SATHI</span></span>
             </span>
         </div>
