--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -8,5 +8,5 @@
    [isStepForm]="accesStepForm" [isValidated]="isValidated" [validationState]="validationState" [visible]="deviceDialog"
     [header]="'Device'" [width]="'600px'" [modal]="true" [isEditing]="isEditing"
     [styleClass]="''" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
-    (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)" 
-    (stepperDropDownChange)="stepperDropdwonChange($event)" (stepperInputTextChange)="stepperInputTextChange($event)" />
+    (onSave)="onSaveDevice($event)" (onInputTextChange)="onInputTextChange($event)"  [tableColumns]="transferDeviceColumns" [tableData]="inStockDevices"
+    (stepperDropDownChange)="stepperDropdwonChange($event)" (stepperInputTextChange)="stepperInputTextChange($event)" (selectionChange)="onDialogTableSelectionChange($event)" />
