prod url changes

--- a/src/app/pages/main/management/esim-activation/esim-activation-list/esim-activation-list.component.html
+++ b/src/app/pages/main/management/esim-activation/esim-activation-list/esim-activation-list.component.html
@@ -51,7 +51,7 @@
                 }
                 }
                 <td>
-                    <p-button text outlined [label]="item ? item['request']['deviceCount'] : '-'" severity="info" (click)="showLinkedDevicesPopup('linkedDevices',item)" />
+                    <p-button text outlined [label]="item['request']['deviceCount'] ?? '-'" severity="info" (click)="showLinkedDevicesPopup('linkedDevices',item)" />
                 </td>
                 @if(item.request.status == 'Approved' ||  item.request.status == 'Reject' || item.request.status == 'InProcess') {
                     <td style="cursor: pointer;">
