SOme changes bu upendra

--- a/src/app/pages/main/management/esim-activation/esim-activation-list/esim-activation-list.component.html
+++ b/src/app/pages/main/management/esim-activation/esim-activation-list/esim-activation-list.component.html
@@ -385,7 +385,7 @@
                             <input [disabled]="!selectedLinkedDevicesData.length" pInputText placeholder="Search" (input)="onDeviceListSearch($event)" />
                         </span> -->
 
-                        <p-button label="Export CSV"  (onClick)="dt2.exportCSV()"  />
+                        <p-button label="Export CSV"  (onClick)="exportLinkedDevices()"  />
                     </ng-template>
 
 
