--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -154,7 +154,7 @@
                                 @if(col.hyperlink) {
                                     <span (click)="col?.hyperlink ? showOverlay(col,item, $event, op) : null" class="underline font-bold text-green-500 cursor-pointer" [ngClass]="{'text-green-500' : item['activationStatus'], 'text-red-500' : !item['activationStatus']}">{{item[col.field]}}</span>
                                 } @else if(col.field === 'downloadCertificate') {
-                                    @if(item['user']?.id && item['user']?.userType === 'User') {
+                                    @if(item['user']?.id && item['user']?.userType === 'User' && userRole !== 'OEM') {
                                         <i class="pi pi-download cursor-pointer text-primary-500" (click)="downloadCertifcate(item)"></i>
                                     } @else {
                                         {{'-'}}
