--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,5 +1,5 @@
 <app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Sim Providers'" [isDataLoading]="isLoading" [actions]="actions"
-   [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno','user.name']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)" [selectionMode]="'none'"
+   [exportFilename]="'Device'" [globalFilterFields]="['imei','iccid','sno','user.name']" (edit)="onEditDevice($event)" (delete)="onDeleteDevice($event)" (deleteFitment)="onDeleteFitment($event)" [selectionMode]="'none'"
    (sampleBulkUpload)="exportSampleBulkUpload($event)" (selectionChange)="onSelectionChange($event)" (new)="openNew($event)" (bulkUpload)="bulkUploadDevice($event)"
    (transferInventory)="onTransferInventory($event)" (sendCommand)="onSendCommand($event)" (activate)="onActivate($event)" (fitment)="onFitment($event)" (emitOverlayAction)="handleOverlayAction($event)" />
 
